k8s/06-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: stock-dashboard
spec:
  selector:
    app: kafka
  ports:
    - port: 29092
      targetPort: 29092
      name: internal
    - port: 9092
      targetPort: 9092
      name: external
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: stock-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 29092
            - containerPort: 9092
          readinessProbe:
            tcpSocket: { port: 29092 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 29092 }
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1", memory: "1Gi" }
